--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,7 +17,7 @@ CINZA: #556270
 body, html {
     height: 100vh;
     width: 100vw;
-    background-color: #0a4481;
+    background-color: #393A3F;
 }
 
 
@@ -40,11 +40,14 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
     display: block;
-    background: blue url(..//imagens/pexels-pavel-danilyuk-8294594.jpg) no-repeat;
+    background: black url(..//imagens/pexels-pavel-danilyuk-8294594.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: 200px;
@@ -53,4 +56,13 @@ section#login > div#imagem{
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
 }
